# AutoGraph

./: .gitignore  README.md  README_OLD.md  autograph-advanced-config.yaml  autograph-config.yaml  autograph-ontology-hybrid.yaml  autograph-ontology-offline.yaml  autograph-ontology-online.yaml  autograph_cli.py  demo_ml_features.py  large_test.txt  main.py  pyproject.toml  test-data.txt  test-wirtschaft.txt  test_api_client.py  test_async_performance.py  test_data.csv  test_data.txt  test_table.py
Demo/: README_DEMO.md  complete_demo.py  demo-config.yaml  demo_data.txt  entities.yaml  ontology.yaml  validate_demo.py
Demo/extracted/: extracted_data.json
Documentation/: API-Documentation.md  CLI-Alle-Kommandos.md  CLI-Documentation.md  CLI-Kommando-Referenz.md  Graph-Documentation.md  README.md  README_OLD.md  Setup-Guide.md  Tutorials.md
custom_ontologies/: medizin.yaml  wirtschaft.yaml
entity_catalogs/: medizin.yaml  wirtschaft.yaml
examples/: sample_medical.txt
output/: extracted_data.json
src/autograph/: __init__.py  cli.py  config.py  types.py
src/autograph/api/: __init__.py  server.py
src/autograph/cli/: yaml_generator.py
src/autograph/core/: __init__.py  async_pipeline.py  cache.py  ml_pipeline.py  pipeline.py
src/autograph/evaluation/: __init__.py  llm_evaluator.py
src/autograph/extractors/: __init__.py  base.py  table.py  text.py
src/autograph/ontology/: __init__.py  custom_ontology_parser.py  ontology_graph.py  ontology_loader.py  ontology_manager.py
src/autograph/processors/: __init__.py  base.py  entity_linker.py  hybrid_relation_extractor.py  ml_config.py  ml_relation_extractor.py  ml_relation_extractor_backup.py  ner.py  relation_extractor.py
src/autograph/storage/: __init__.py  base.py  neo4j.py
